--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,42 @@
 {
-  "extends": "next/core-web-vitals"
+	"env": {
+		"browser": true,
+		"es2021": true
+	},
+	"root": true,
+	"extends": "next/core-web-vitals",
+	"parserOptions": {
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
+	"rules": {
+		"react/prop-types": "off",
+		"react-hooks/rules-of-hooks": "error",
+		"react-hooks/exhaustive-deps": "warn",
+		"@typescript-eslint/explicit-function-return-type": "off",
+		"@typescript-eslint/no-empty-function": [
+			"off",
+			{
+				"allow": ["arrowFunctions"]
+			}
+		],
+		"no-restricted-imports": [
+			"error",
+			{
+				"paths": [
+					{
+						"name": "styled-components",
+						"message": "Please import from styled-components/macro"
+					}
+				],
+				"patterns": ["!styled-components/macro"]
+			}
+		],
+		"no-console": [
+			"warn",
+			{
+				"allow": ["error"]
+			}
+		]
+	}
 }
