--- a/package.json
+++ b/package.json
@@ -1,23 +1,62 @@
 {
-  "name": "open-jira",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "13.1.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
-  }
+	"name": "open-jira",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@next/font": "13.1.1",
+		"@types/node": "18.11.18",
+		"@types/react": "18.0.26",
+		"@types/react-dom": "18.0.10",
+		"axios": "^1.2.2",
+		"axios-retry": "^3.3.1",
+		"eslint": "8.31.0",
+		"eslint-config-next": "13.1.1",
+		"next": "13.1.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-redux": "^8.0.5",
+		"redux-persist": "^6.0.0",
+		"styled-components": "^5.3.6",
+		"twin.macro": "^3.1.0",
+		"typescript": "4.9.4"
+	},
+	"devDependencies": {
+		"@types/redux-persist": "^4.3.1",
+		"@types/styled-components": "^5.1.26",
+		"autoprefixer": "^10.4.13",
+		"babel-plugin-styled-components": "^2.0.7",
+		"babel-plugin-twin": "^1.1.0",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.1",
+		"stylelint": "^14.16.1",
+		"stylelint-config-prettier": "^9.0.4",
+		"stylelint-config-recommended": "^9.0.0",
+		"stylelint-config-styled-components": "^0.1.1",
+		"stylelint-prettier": "^2.0.0",
+		"stylelint-processor-styled-components": "^1.10.0",
+		"tailwindcss": "^3.2.4"
+	},
+	"babelMacros": {
+		"styledComponents": {
+			"pure": true,
+			"displayName": true,
+			"meaninglessFileNames": [
+				"index",
+				"styles"
+			]
+		},
+		"twin": {
+			"preset": "styled-components",
+			"styled": {
+				"import": "default",
+				"from": "styled-components/macro"
+			}
+		}
+	}
 }
