--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
 		"es2021": true
 	},
 	"root": true,
-	"extends": "next/core-web-vitals",
+	"extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended"],
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module"
