--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
 	},
 	"root": true,
 	"extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended"],
+	"plugins": ["@typescript-eslint", "react-hooks"],
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module"
@@ -15,7 +16,7 @@
 		"react-hooks/exhaustive-deps": "warn",
 		"@typescript-eslint/explicit-function-return-type": "off",
 		"@typescript-eslint/no-empty-function": [
-			"off",
+			"error",
 			{
 				"allow": ["arrowFunctions"]
 			}
@@ -38,5 +39,18 @@
 				"allow": ["error"]
 			}
 		]
-	}
+	},
+	"overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "rules": {
+        "@typescript-eslint/explicit-function-return-type": [
+          "error",
+          {
+            "allowExpressions": true
+          }
+        ]
+      }
+    }
+  ]
 }
