--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,15 @@
 {
 	"cSpell.words": [
+		"Activas",
+		"Descripción",
+		"Fecha",
+		"Pendientes",
 		"persistor",
 		"reduxjs",
 		"stylelint",
 		"tailwindcss",
+		"Terminado",
+		"uuidv",
 		"webfonts"
 	]
 }
