--- a/package.json
+++ b/package.json
@@ -14,23 +14,29 @@
 		"@types/node": "18.11.18",
 		"@types/react": "18.0.26",
 		"@types/react-dom": "18.0.10",
+		"@typescript-eslint/eslint-plugin": "^5.48.2",
 		"axios": "^1.2.2",
 		"axios-retry": "^3.3.1",
 		"eslint": "8.31.0",
 		"eslint-config-next": "13.1.1",
 		"next": "13.1.1",
+		"ramda": "^0.28.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.7.1",
 		"react-redux": "^8.0.5",
 		"redux-persist": "^6.0.0",
+		"reselect": "^4.1.7",
 		"styled-components": "^5.3.6",
 		"twin.macro": "^3.1.0",
-		"typescript": "4.9.4"
+		"typescript": "4.9.4",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
+		"@types/ramda": "^0.28.21",
 		"@types/redux-persist": "^4.3.1",
 		"@types/styled-components": "^5.1.26",
+		"@types/uuid": "^9.0.0",
 		"autoprefixer": "^10.4.13",
 		"babel-plugin-styled-components": "^2.0.7",
 		"babel-plugin-twin": "^1.1.0",
