--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"ramda": "^0.28.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.43.0",
 		"react-icons": "^4.7.1",
 		"react-redux": "^8.0.5",
 		"redux-persist": "^6.0.0",
