--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^2.9.10",
 		"@next/font": "13.1.1",
 		"@reduxjs/toolkit": "^1.9.1",
 		"@types/node": "18.11.18",
@@ -17,6 +18,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.48.2",
 		"axios": "^1.2.2",
 		"axios-retry": "^3.3.1",
+		"date-fns": "^2.29.3",
 		"eslint": "8.31.0",
 		"eslint-config-next": "13.1.1",
 		"next": "13.1.1",
@@ -31,7 +33,8 @@
 		"styled-components": "^5.3.6",
 		"twin.macro": "^3.1.0",
 		"typescript": "4.9.4",
-		"uuid": "^9.0.0"
+		"uuid": "^9.0.0",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@types/ramda": "^0.28.21",
