--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
 		"@types/react": "18.0.26",
 		"@types/react-dom": "18.0.10",
 		"@typescript-eslint/eslint-plugin": "^5.48.2",
-		"axios": "^1.2.2",
+		"axios": "^1.3.3",
 		"axios-retry": "^3.3.1",
 		"date-fns": "^2.29.3",
 		"eslint": "8.31.0",
 		"eslint-config-next": "13.1.1",
+		"mongoose": "^6.9.1",
 		"next": "13.1.1",
 		"ramda": "^0.28.0",
 		"react": "18.2.0",
